--- a/BataTurboNet/BataTurboNet.csproj
+++ b/BataTurboNet/BataTurboNet.csproj
@@ -68,13 +68,13 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="NS.Enterprise.ClientAPI">
-      <HintPath>..\..\..\..\..\Downloads\TRBOnet.Enterprise.API_5.2.0.1375\DLL\NS.Enterprise.ClientAPI.dll</HintPath>
+      <HintPath>Resources\NS.Enterprise.ClientAPI.dll</HintPath>
     </Reference>
     <Reference Include="NS.Enterprise.Objects">
-      <HintPath>..\..\..\..\..\Downloads\TRBOnet.Enterprise.API_5.2.0.1375\DLL\NS.Enterprise.Objects.dll</HintPath>
+      <HintPath>Resources\NS.Enterprise.Objects.dll</HintPath>
     </Reference>
     <Reference Include="NS.Shared">
-      <HintPath>..\..\..\..\..\Downloads\TRBOnet.Enterprise.API_5.2.0.1375\DLL\NS.Shared.dll</HintPath>
+      <HintPath>Resources\NS.Shared.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -160,7 +160,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_StartDate="2000/1/1" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_UseGlobalSettings="True" />
+      <UserProperties BuildVersion_UseGlobalSettings="True" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_StartDate="2000/1/1" />
     </VisualStudio>
   </ProjectExtensions>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
